replace usages of IOUtils with Java NIO API