@@ -16,7 +16,6 @@
  */
 package spoon.test.imports;
 
-import org.apache.commons.io.IOUtils;
 import org.junit.jupiter.api.Test;
 import spoon.Launcher;
 import spoon.SpoonException;
@@ -75,11 +74,11 @@ import spoon.testing.utils.ModelUtils;
 
 import java.io.BufferedReader;
 import java.io.File;
-import java.io.FileReader;
 import java.io.IOException;
 import java.io.StringReader;
 import java.nio.charset.Charset;
 import java.nio.file.Files;
+import java.nio.file.Path;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
@@ -1034,8 +1033,8 @@ public class ImportTest {
 		launcher.addInputResource("./src/test/java/"+path);
 		launcher.run();
 
-		File output = new File("target/testmportInCu/"+path);
-		String code = IOUtils.toString(new FileReader(output));
+		Path output = Path.of("target/testmportInCu/" + path);
+		String code = Files.readString(output);
 
 		// the ArrayList is imported and used in short mode
 		assertThat(code, containsString("import java.util.ArrayList"));
@@ -1047,7 +1046,7 @@ public class ImportTest {
 		assertThat(code, containsString("ArrayList<String> list = new ArrayList<>()"));
 
 		// cleaning
-		output.delete();
+		Files.delete(output);
 	}
 
 	@Test
@@ -1061,16 +1060,15 @@ public class ImportTest {
 
 		canBeBuilt(outputDir, 7);
 
-		String pathA = "spoon/test/imports/testclasses/multiplecu/A.java";
-		String pathB = "spoon/test/imports/testclasses/multiplecu/B.java";
+		Path outputDirPath = Path.of(outputDir);
+		Path pathA = outputDirPath.resolve("spoon/test/imports/testclasses/multiplecu/A.java");
+		Path pathB = outputDirPath.resolve("spoon/test/imports/testclasses/multiplecu/B.java");
 
-		File outputA = new File(outputDir+"/"+pathA);
-		String codeA = IOUtils.toString(new FileReader(outputA));
+		String codeA = Files.readString(pathA);
 
 		assertThat(codeA, containsString("import java.util.List;"));
 
-		File outputB = new File(outputDir+"/"+pathB);
-		String codeB = IOUtils.toString(new FileReader(outputB));
+		String codeB = Files.readString(pathB);
 
 		assertThat(codeB, containsString("import java.awt.List;"));
 	}
